--- a/shop.css
+++ b/shop.css
@@ -34,11 +34,20 @@ ion-icon {
     position: relative;
     grid-template-columns:repeat(4, 1fr);;
     flex-direction: row;
+    gap:20px;
+    margin-left: 140px;
 
 }
-img{
+.img:hover{
+    transform: scale(1.1);
+}
+.img{
+    transition: 0.2s;
     width: 200px;
     height: 200px;
+    border-radius: 15px;
+
+}
 }
 .cart{
     position: absolute;
@@ -127,4 +136,5 @@ img{
 .billi{
      width: 100px;
      height: 100px;
+
 }
